completed rbd controller
